--- a/cspcapp/static/css/base.css
+++ b/cspcapp/static/css/base.css
@@ -24,6 +24,14 @@ body {
     padding-top: 20px;
 }
 
+.sidebar-element {
+    height: 60px;
+}
+
+.sidebar-element a span {
+    margin-top: 10px;
+}
+
 .sidebar-element:hover,
 .exit-button:hover{
     background: #8b9dc3;
@@ -69,7 +77,7 @@ body {
 .sidebar a {
     padding-left: 12px;
     padding-top: 5px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     text-decoration: none;
     font-size: 30px;
     color: whitesmoke;
