--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     <script src="{% static 'javascript/commonFiles/animations.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/templates.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/common.js' %}" type="text/javascript"></script>
+    <script src="{% static 'javascript/commonFiles/config.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/base.js' %}" type="text/javascript"></script>
     {% block scriptconnect %}
     {% endblock %}
@@ -33,8 +34,9 @@
 <body>
 <div class="sidebar">
     <div class="login-info">
-{#        <div class="circle" style="padding: 0px 0px 10px 8px; padding-bottom: 45px"><font size="4">AA</font></div>#}
-                <div class="circle" style="font-size: 20px; text-align: center; padding-top: 8px;">{{ user.first_name|first }}{{ user.last_name|first }}</div>
+                <div class="circle" style="font-size: 20px; text-align: center; padding-top: 8px;">
+                    {{ user_additional_info.person_name_txt|first }}{{ user_additional_info.person_surname_txt|first }}
+                </div>
 
     </div>
 
@@ -42,9 +44,11 @@
         <a href="/settings/"><span class="glyphicon glyphicon-cog"></span></a>
     </div>
 
-    <div class="exit-button">
-        <a href="/accounts/logout/" target="_self"><span class="fas fa-door-open"></span></a>
+    <div class="sidebar-element">
+        <a href="/logout/" target="_self"><span class="fas fa-door-open"></span></a>
     </div>
+
+    <hr style="width: 100%; border-width: 4px; margin: 0;" />
 
     <div class="sidebar-element">
         <a href="/"><span class="glyphicon glyphicon-list-alt"></span></a>
@@ -60,7 +64,7 @@
 
     <div class="sidebar-element">
         <div class="dropdown">
-            <a href="#" class="dropbtn"><span class="glyphicon glyphicon-option-horizontal"></span></a>
+            <a href="#" class="sidebar-element dropbtn"><span class="glyphicon glyphicon-option-horizontal"></span></a>
             <span class="hidden_panel">Утилиты</span>
             <div class="dropdown-content">
               <a href="/registration_requests/">Запросы на регистрацию</a>
