--- a/templates/courses_info_view.html
+++ b/templates/courses_info_view.html
@@ -21,6 +21,7 @@
                 <td style="width: 40px;">ЦЗЧ</td>
                 <td style="width: 40px;">Часы</td>
                 <td style="width: 80px;">ЦЗПГ</td>
+                <td style="width: 80px;">Месяцы</td>
                 <td style="width: 110px;"></td>
             </tr>
         </thead>
@@ -35,6 +36,7 @@
                 <td><input type="text" name="price_per_hour" value="{{ course.price_per_hour }}" style="border-width: 0; width: 100%;" readonly/></td>
                 <td><input type="text" name="number_of_hours" value="{{ course.number_of_hours }}" style="border-width: 0; width: 100%;" readonly/></td>
                 <td>dev</td>
+                <td><input type="text" name="number_of_month" value="{{ course.number_of_month }}" style="border-width: 0; width: 100%;" readonly/></td>
                 </form>
                 <td>
                     <button onclick="toggleInfoTab('course', {{ course.pk }})">
@@ -72,9 +74,12 @@
                                 <input type="hidden" name="id" value="{{ course_element.pk }}">
                             {% csrf_token %}
                                 <td>
-                                    <select name="teacher_id" disabled>
+                                    <select name="teacher_person_id" disabled>
                                         {% for i in teachers_list %}
-                                            <option value="{{ i.person_id }}">{{ i.person.person_surname_txt }} {{ i.person.person_name_txt }} {{ i.person.person_father_name_txt }} - {{ i.auth_user.username }} </option>
+                                            <option value="{{ i.person_id }}" {% ifequal i.person_id course_element.teacher_person_id %}
+                                            selected
+                                            {% endifequal %}
+                                            >{{ i.person.person_surname_txt }} {{ i.person.person_name_txt }} {{ i.person.person_father_name_txt }} - {{ i.auth_user.username }} </option>
                                         {% endfor %}
                                     </select>
                                 </td>
@@ -108,13 +113,12 @@
                         </tbody>
                         <tfoot>
                         <tr id="course_element_add_row_{{ course.pk }}">
-                                 <form method="post" id="course_element_add_form_{{ course.pk }}" name="course_element_add_form_{{ course.pk }}">
-                                <input type="hidden" name="course_id" value="{{ course.pk }}">
+                                <input type="hidden" name="course_id"  value="{{ course.pk }}">
                                  {% csrf_token %}
                                 <td>
-                                    <select name="teacher_id">
+                                    <select name="teacher_id" id="add_row_teacher_id">
                                         {% for i in teachers_list %}
-                                            <option value="{{ i.person_id }}">{{ i.person.person_surname_txt }} {{ i.person.person_name_txt }} {{ i.person.person_father_name_txt }} - {{ i.auth_user.username }} </option>
+                                            <option value="{{ i.person_id }}" >{{ i.person.person_surname_txt }} {{ i.person.person_name_txt }} {{ i.person.person_father_name_txt }} - {{ i.auth_user.username }} </option>
                                         {% endfor %}
                                     </select>
                                 </td>
@@ -160,7 +164,6 @@
                                         <input type="text" name="course_class_end_hour" value="" style="border-width: 0; width: 18px;" />:
                                         <input type="text" name="course_class_end_minute" value="" style="border-width: 0; width: 18px;" />
                                     </td>
-                                </form>
                                 <td>
                                     <button id="course_element_add_button_{{ course.pk }}" onclick="addNewObject('course_element', {{ course.pk }})">
                                         <span class="glyphicon glyphicon-plus" id="course_element_add_button_span_{{ course.pk }}"></span>
@@ -185,7 +188,9 @@
                 <td><input type="text" name="short_nm" value="" style="border-width: 0; width: 100%;" /></td>
                 <td><input type="text" name="price_per_hour" value="" style="border-width: 0; width: 100%;" /></td>
                 <td><input type="text" name="number_of_hours" value="" style="border-width: 0; width: 100%;" /></td>
-                <td>-</td>
+                    <td>-</td>
+                    <td><input type="text" name="number_of_month" value="" style="border-width: 0; width: 100%;" /></td>
+
 
                 <td>
                     <button>
