--- a/cspcapp/static/css/students_overview.css
+++ b/cspcapp/static/css/students_overview.css
@@ -1,104 +1,41 @@
-.search-box {
-    width: 270px;
-    position: fixed;
-    margin: 10px 10px 10px 0px;
-    padding: 10px;
-    right: 0;
-    display: inline-block;
-    border: 1px solid gainsboro;
-    background-color: white;
-
-}
-
-.search-box h3 {
-    color: black;
-}
 
 
-.search-box input[type="text"] {
-    width: 100%;
-    margin-bottom: 10px;
-}
 
-.search-box input[type="password"] {
-    width: 100%;
-    margin-bottom: 10px;
-}
+/*.main-table {*/
+/*    !*table-layout: fixed;*!*/
+/*    background-color: white;*/
+/*    width: calc(100% - 280px);*/
+/*    margin-top: 10px;*/
+/*    !*border-collapse:collapse;*!*/
 
-.search-box table {
-    margin-left: -5px;
-    width: calc(100% + 10px);
-}
+/*}*/
 
-.search-box table button {
-    width: 100%;
-    height: 30px;
-    background-color: #3b5998;
-    color: white;
-    border-width: 0;
-    text-align: center;
-    vertical-align: middle;
-    horiz-align: center;
-    align-items: center;
-}
-
-.search-box table a {
-    width: 100%;
-    height: 30px;
-    background-color: #3b5998;
-    color: white;
-    border-width: 0;
-    text-align: center;
-    vertical-align: middle;
-    horiz-align: center;
-    align-items: center;
-    display: inline-block;
-}
-
-.search-box table a span {
-    top: 6px;
-}
-
-.search-box table td {
-    padding: 5px;
-}
+/*.main-table thead {*/
+/*    background-color: #3b5998;*/
+/*    color: white;*/
+/*}*/
 
 
-.main-table {
-    /*table-layout: fixed;*/
-    background-color: white;
-    width: calc(100% - 280px);
-    margin-top: 10px;
-    /*border-collapse:collapse;*/
+/*.main-table tr {*/
+/*    border-width: 0;*/
+/*}*/
 
-}
+/*.main-table a, button{*/
+/*    display: inline-block;*/
+/*    margin-right: 2px;*/
+/*    background-color: #3b5998;*/
+/*    color: white;*/
+/*    border-width: 0;*/
+/*    text-align: center;*/
+/*    vertical-align: middle;*/
+/*    horiz-align: center;*/
+/*    align-items: center;*/
+/*    width: 25px;*/
+/*    height: 25px;*/
+/*}*/
 
-.main-table thead {
-    background-color: #3b5998;
-    color: white;
-}
-
-
-.main-table tr {
-    border-width: 0;
-}
-
-.main-table a, button{
-    display: inline-block;
-    margin-right: 2px;
-    background-color: #3b5998;
-    color: white;
-    border-width: 0;
-    text-align: center;
-    vertical-align: middle;
-    horiz-align: center;
-    align-items: center;
-    width: 25px;
-    height: 25px;
-}
-
-.main-table a span {
-    top: 4px;
-}
+/*.main-table a span {*/
+/*    top: 4px;*/
+/*}*/
 
 
