--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     <link rel="stylesheet" href="{% static 'css/students_overview.css' %}">
     <link rel="stylesheet" href="{% static 'css/student_detail_view.css' %}">
+    <link rel="stylesheet" href="{% static 'css/global.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
           integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
           crossorigin="anonymous">
+    <script src="{% static 'javascript/swig.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/jquery.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/constants.js' %}" type="text/javascript"></script>
     <script src="{% static 'javascript/commonFiles/objectsEditing.js' %}" type="text/javascript"></script>
@@ -29,6 +31,8 @@
     <script src="{% static 'javascript/base.js' %}" type="text/javascript"></script>
     {% block scriptconnect %}
     {% endblock %}
+
+
 </head>
 
 <body>
@@ -36,15 +40,18 @@
 
 
     <div class="login-info">
-                <div class="circle" style="font-size: 20px; text-align: center; padding-top: 8px;">
-                    {{ user_additional_info.person_name_txt|first }}{{ user_additional_info.person_surname_txt|first }}
-                </div>
-
+        <div class="circle" style="font-size: 12px; ">
+            <a style="width: 100%; height: 100%; margin: 0; font-size: 20px; text-align: center; padding: 7px 0 0 0;" href="/accounts/profile/" data-toggle="tooltip" data-placement="right" title="Настройки">
+                    {% if user_additional_info %}
+                        {{ user_additional_info.person_name_txt|first }}{{ user_additional_info.person_surname_txt|first }}
+                    {% endif %}
+            </a>
+        </div>
     </div>
 
-    <div class="sidebar-element">
-        <a href="/settings/" data-toggle="tooltip" data-placement="right" title="Настройки"><span class="glyphicon glyphicon-cog"></span></a>
-    </div>
+{#    <div class="sidebar-element">#}
+{#        <a href="/settings/" data-toggle="tooltip" data-placement="right" title="Настройки"><span class="glyphicon glyphicon-cog"></span></a>#}
+{#    </div>#}
 
     <div class="sidebar-element">
         <a href="/logout/" target="_self" data-toggle="tooltip" data-placement="right" title="Выход"><span class="fas fa-door-open"></span></a>
@@ -61,6 +68,7 @@
     <div class="sidebar-element">
         <a href="/courses/" data-toggle="tooltip" data-placement="right" title="Список курсов"><span class="glyphicon glyphicon-tasks"></span></a>
     </div>
+{% if user.is_superuser %}
     <div class="sidebar-element">
         <a href="/teachers/" data-toggle="tooltip" data-placement="right" title="Список учителей"><span class="glyphicon glyphicon-briefcase"></span></a>
     </div>
@@ -77,6 +85,7 @@
             </div>
         </div>
     </div>
+{% endif %}
 
 
 
